<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/resolver_activity_background_xui" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/contentPanel" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="16.0dip" android:textColor="@color/resolver_activity_title_text_xui" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/title" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="33.0dip" android:singleLine="true" android:paddingStart="46.0dip" android:paddingEnd="46.0dip" android:layout_alwaysShow="true" />
    <com.android.internal.widget.DraggableGridViewPager android:gravity="center_horizontal" android:id="@id/resolver_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:itemHeight="100.0dip" android:itemWidth="90.0dip" android:gridColumnCount="4" android:gridLandColumnCount="4" android:gridRowCount="2" android:gridLandRowCount="1" />
    <TextView android:gravity="center" android:id="@id/empty" android:padding="32.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/noApplications" android:layout_alwaysShow="true" />
    <com.android.internal.widget.CirclePageIndicator android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/resolver_more" android:layout_width="fill_parent" android:layout_height="10.0dip" android:layout_marginTop="10.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/button_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:enabled="false" android:textSize="15.0dip" android:textColor="@color/btn_text_color_default_xui" android:layout_gravity="center" android:id="@id/button_once" android:background="@drawable/resolver_activity_btn_bg_xui" android:layout_width="fill_parent" android:layout_height="@dimen/list_height_one_line_xui" android:text="@string/activity_resolver_use_once" android:onClick="onButtonClick" />
        <Button android:enabled="false" android:textSize="15.0dip" android:textColor="@color/btn_text_color_default_xui" android:layout_gravity="center" android:id="@id/button_always" android:background="@drawable/resolver_activity_btn_bg_xui" android:layout_width="fill_parent" android:layout_height="@dimen/list_height_one_line_xui" android:text="@string/activity_resolver_use_always" android:onClick="onButtonClick" />
    </LinearLayout>
    <Button android:textSize="15.0dip" android:textColor="@color/resolver_activity_cancel_btn_text_xui" android:layout_gravity="center" android:id="@id/button_resolver_cancle" android:background="@drawable/actiondlg_btn_cancel_selector_xui" android:paddingTop="4.0dip" android:layout_width="480.0dip" android:layout_height="58.0dip" android:text="@string/cancel" android:onClick="onButtonClick" />
</LinearLayout>