<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/xui_dialog_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:minWidth="296.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="#ffe74a1a" android:gravity="center" android:id="@id/xui_title" android:layout_width="fill_parent" android:layout_height="70.0dip" android:text="@string/xui_system_security_alert" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="ifContentScrolls">
        <LinearLayout android:orientation="vertical" android:id="@id/xui_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#ff666666" android:id="@id/xui_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xui_slow_down_alert" android:singleLine="false" android:lineSpacingExtra="2.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="@color/xui_category_text" android:id="@id/xui_message_content2" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginBottom="24.0dip" android:text="@string/xui_want_install" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="54.0dip">
        <LinearLayout android:orientation="horizontal" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:paddingStart="2.0dip" android:paddingEnd="2.0dip" style="?android:attr/buttonBarStyle">
            <Button android:layout_gravity="start" android:id="@id/xui_dialoag_positive_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/xui_dialoag_negative_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>